Fix spacing for loading btn

--- a/css/gitorious.css
+++ b/css/gitorious.css
@@ -7,6 +7,10 @@
   box-shadow: none;
 }
 
+a.loading > span {
+  margin-left: 10px;
+}
+
 .navbar-search .search-query {
   box-shadow: none;
 }
